--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "author": "ninjasan420",
     "license": "MIT",
     "dependencies": {
+        "node": "^12.16.0",
         "discord.js": "^11.1.0",
         "glob": "^7.1.2",
         "node-opus": "^0.2.6"
