--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "node": "^12.18.0",
         "discord.js": "^11.1.0",
-        "glob": "^7.1.2"
+        "glob": "^7.1.2",
+        "node-opus": "^0.2.6"
     }
 }
