--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "license": "MIT",
     "dependencies": {
         "node": "^12.18.0",
-        "discord.js": "^11.1.0",
+        "discord.js": "^11.1.x",
         "glob": "^7.1.2",
         "axios": "^0.18.x"
     }
