node fetch added

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "node": "^12.18.x",
         "discord.js": "^11.1.x",
         "glob": "^7.1.2",
-        "axios": "^0.18.x"
+        "axios": "^0.18.x",
+        "node-fetch": "^2.6.x"
     }
 }
