--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "author": "ninjasan420",
     "license": "MIT",
     "dependencies": {
-        "node": "^12.18.x",
-        "discord.js": "^11.1.x",
-        "glob": "^7.1.2",
         "axios": "^0.18.x",
+        "discord.js": "^11.6.4",
+        "glob": "^7.1.2",
+        "node": "^12.18.x",
         "node-fetch": "^2.6.x"
     }
 }
