--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
     "token": "process.env.BOT_TOKEN",
     "prefix": "§",
-    "bot_status": "§help"
+
+    "bot_settings": {
+        "bot_status": "§help"
+    }
 }
