Revert "Merge branch 'master' of https://github.com/ninjasan420/Stammtisch-Bot"
This reverts commit 41c72ad4a896d8d36027b3b935a90f073e53f6c5, reversing
changes made to 7da866fa61c879309040d9e3e78209608f9cfa27.

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "author": "ninjasan420, PossumInABox",
     "license": "MIT",
     "dependencies": {
-        "@vitalets/google-translate-api": "^3.0.0",
         "axios": "^0.18.x",
         "discord.js": "^11.6.4",
-        "discord.js-commando": "github:discordjs/Commando",
         "glob": "^7.1.2",
-        "mongoose": "^5.9.17",
         "node": "^12.18.x",
-        "node-fetch": "^2.6.x"
+        "node-fetch": "^2.6.x",
+        "mongoose": "^5.9.17",
+        "discord.js-commando": "github:discordjs/Commando",
+        "@vitalets/google-translate-api": "^3.0.0"
     }
 }
