--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "stammtischbot",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Der Stammtisch Bot",
     "main": "app.js",
     "scripts": {
@@ -13,16 +13,16 @@
         "discord.js",
         "bot"
     ],
-    "author": "ninjasan420, PossumInABox",
+    "author": "ninjasan420, PossumInABox, Kysul",
     "license": "MIT",
     "dependencies": {
         "@vitalets/google-translate-api": "^3.0.0",
         "axios": "^0.21.x",
-        "discord.js": "^11.6.4",
+        "discord.js": "^12.0.1",
         "discord.js-commando": "github:discordjs/Commando",
         "glob": "^7.1.2",
-        "mongoose": "^5.9.17",
-        "node": "^12.18.x",
+        "mongoose": "^5.11.14",
+        "node": "^12.20.1",
         "node-fetch": "^2.6.x"
     }
 }
