--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "@vitalets/google-translate-api": "^5.0.0",
         "axios": "^0.21.x",
         "discord.js": "^12.0.1",
-        "discord.js-commando": "^0.12.0",
+        "discord.js-commando": "github:discordjs/Commando",
         "glob": "^7.1.2",
         "mongoose": "^5.11.14",
         "node": "^12.20.1",
